src/test/resources/fixtures/go/compile-error/go.mod
module nbm/fixture/calcbuildfail

go 1.21
